--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ img{
 
 <body>
 <div class="topnav">
-  <a href="ftstaging.netlify.com/">Home</a>
+  <a href="https://ftstaging.netlify.com/">Home</a>
   <a href="https://ftabout.netlify.com">About Us</a>
   <a href="https://ftportfolio.netlify.com">Portfolio</a>
   <a class="active" href="https://ftcontact.netlify.com">Contact Us</a>
