--- a/index.html
+++ b/index.html
@@ -102,11 +102,15 @@ img{
               <div class="col">
                 <input type="text" name="email" class="form-control" placeholder="email address" required>
               </div>
+              <div class="col">
+                <input type="text" name="phone" class="form-control" placeholder="Phone Number" >
+              </div>
             </div>
           </div>
           <div class="form-group">
             <textarea placeholder="Your Message" class="form-control" name="message" rows="14" required></textarea>
           </div>
+          <input type="hidden" name="_template" value="table">
           <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>>
         </form>
     </div>
