--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ img{
           <div class="form-group">
             <textarea placeholder="Your Message" class="form-control" name="message" rows="14" required></textarea>
           </div>
+          <input type="text" name="_honey" style="display:none">
           <input type="hidden" name="_template" value="table">
           <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>>
         </form>
