--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ img{
 <main>
     <div class="container">
       <h1>Contact Us For Staging</h1>
-        <form action="https://formsubmit.co/thomas.dale2@gmail.com" method="POST">
+        <form action="https://formsubmit.co/nsdale@yahoo.com" method="POST">
           <div class="form-group">
             <div class="form-row">
               <div class="col">
