--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ img{
 	padding: 1em;
 }
 .topnav {
-    background-color: #2F80EC;
+    background-color: #5B5B5B;
     overflow: hidden;
 }
 .topnav a {
@@ -57,7 +57,7 @@ img{
 }
 
 .footnav {
-    background-color: #2F80EC;
+    background-color: #5B5B5B;
     overflow: hidden;
 }
 
