--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ h2 {
 }
 h3 {
   font-size: 2em;
-  color: white;
+  font-family: Rancho;
+  color: black;
   text-align: center;
 }
 h4 {
@@ -47,7 +48,7 @@ img{
       display:block;
       width:100%;
     background: #5B5B5B;
-    line-height: 1.6em;
+    line-height: 2.5em;
     font-weight: 400;
     width:100%;
     text-align:center;
@@ -61,7 +62,6 @@ img{
       padding-left:0;
       text-align:center;
       width:100%;
-      position: absolute;
       background: #5B5B5B;
     }
 
@@ -220,6 +220,7 @@ img{
 <main>
     <div class="container">
       <h1>Contact Us For Staging</h1>
+      <h3>If you want to speak with us immediately, please don't hesitate to call Nina at her office (925) 680-1133 or cell (925) 300-7884.  If you would like to send us a message, use the contact us form below and we will be sure to respond within 48 hours.</h3>
         <form action="https://formsubmit.co/nsdale@yahoo.com" method="POST">
           <div class="form-group">
             <div class="form-row">
@@ -239,7 +240,7 @@ img{
           </div>
           <input type="text" name="_honey" style="display:none">
           <input type="hidden" name="_template" value="table">
-          <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>>
+          <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
         </form>
     </div>
 </main>
