--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 	font-family: Rancho, sans-serif;
 	text-align: center;
 }
-h1, h2 {
+h1 {
 	font-family: Rancho, cursive;
 	margin: 0.125em;
 }
@@ -25,14 +25,14 @@ h1 {
 	text-align: center;
 }
 h2 {
-	font-size: 4em;
-  color: blue;
+	font-size: 1.9em;
+  color: black;
+  font-family: Arial black;
   text-align: center;
 }
 h3 {
   font-size: 2em;
-  font-family: Arial black;
-  color: black;
+  color: white;
   text-align: center;
 }
 h4 {
@@ -220,7 +220,7 @@ img{
 <main>
     <div class="container">
       <h1>Contact Us For Staging</h1>
-      <h3>If you want to speak with us immediately, please don't hesitate to call Nina at her office (925) 680-1133 or cell (925) 300-7884.  If you would like to send us a message, use the contact us form below and we will be sure to respond within 48 hours.</h3>
+      <h2>If you want to speak with us immediately, please don't hesitate to call Nina at her office (925) 680-1133 or cell (925) 300-7884.  If you would like to send us a message, use the contact us form below and we will be sure to respond within 48 hours.</h2>
         <form action="https://formsubmit.co/nsdale@yahoo.com" method="POST">
           <div class="form-group">
             <div class="form-row">
