--- a/index.html
+++ b/index.html
@@ -190,7 +190,49 @@ img{
     background-color: #5B5B5B;
     overflow: hidden;
 }
+.rounded-social-buttons .social-button {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  width: 3.125rem;
+  height: 3.125rem;
+  border: 0.125rem solid transparent;
+  padding: 0;
+  text-decoration: none;
+  text-align: center;
+  color: #fefefe;
+  font-size: 1.5625rem;
+  font-weight: normal;
+  line-height: 2em;
+  border-radius: 1.6875rem;
+  transition: all 0.5s ease;
+  margin-right: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+.svg-inline--fa {
+  vertical-align: -0.200em;
+}
 
+.rounded-social-buttons {
+  text-align: center;
+}
+.rounded-social-buttons .social-button:hover, .rounded-social-buttons .social-button:focus {
+  -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+.rounded-social-buttons .fa-twitter, .fa-facebook-f, .fa-linkedin, .fa-youtube, .fa-instagram {
+  font-size: 25px;
+}
+.rounded-social-buttons .social-button.facebook {
+  background: #3b5998;
+}
+
+.rounded-social-buttons .social-button.facebook:hover, .rounded-social-buttons .social-button.facebook:focus {
+  color: #3b5998;
+  background: #fefefe;
+  border-color: #3b5998;
+}
 .header-img {
     background: url(https://tom.imgix.net/ftstaging_logo_white.png?w=270&h=135&auto=format) right top no-repeat;
     height: 135px;
@@ -245,9 +287,11 @@ img{
     </div>
 </main>
 <footer>
-  <div class="footnav">
+  <div class="footnav rounded-social-buttons">
     <h3>Furniture Today Home Staging</h3>
-    <h4>1950A Market Street<br>Concord, CA 94520<br>Off: (925) 680-1133 Cell: (925) 300-7884</h4>
+    <h4>1950A Market Street<br>Concord, CA 94520<br>Off: (925) 680-1133 Cell: (925) 300-7884<br>Find Us On Facebook <a class="social-button facebook" href="https://www.facebook.com/FurnitureTodayConcord/" target="_blank"><i class="fab fa-facebook-f"></i></a></h4>
   </div>
 </footer>
-</body></html>
+</body>
+<script type="text/javascript" src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
+</html>
