--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <meta name="description" content="Furniture Today Home Staging provides staging for vacant homes in Contra Costa and Alameda County in the East Bay.  We work with both Real Estate agents and home owners to stage their homes before an open house."> 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:image" content="https://tom.imgix.net/staging/arreba/after/IMG_8778.jpg?fit=crop&h=630&w=1200&q=70&cs=srgb&auto=format%2Cenhance%2Ccompress&txt64=RnVybml0dXJlIFRvZGF5IEhvbWUgU3RhZ2luZw&txt-color=5b5b5b&txt-size=60&mark64=aHR0cHM6Ly90b20uaW1naXgubmV0LzF4MV9tb3RpZi5wbmc_Zml0PWNyb3AmaD03MCZ3PTEyMDAmYmc9d2hpdGU&mark-pad=0&txt-align=bottom%2Ccenter&txt-pad=15">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155088788-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-155088788-1');
+</script>
 <title>Furniture Today Home Staging Contact Us</title>
 <link rel="icon" href="https://tom.imgix.net/staging/ftstaging_logo.png?w=50&h=50">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
